--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -15,12 +15,12 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ## Final projects for NRES 470
 
-Students will work in groups of ~3-4 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as participation and peer evaluations.
+Students will work in groups of ~3-4 people to perform a population viability analysis (PVA) to rank conservation or management actions for a species of conservation concern (species of your choice!). Grading will be based on finished products (written and oral presentations) as well as project proposals and written peer reviews.
 
 ## Overview
 
 - Select a species and management question of interest. 
-- Perform a thorough literature review on your species of interest- collect all the information you can about life history (e.g., age at maturity), key vital rates (e.g., b, d), carrying capacity, etc. 
+- Perform a thorough literature review on your species of interest- collect all the information you can about life history (e.g., age at maturity), key vital rates (e.g., stage-structured birth and survival rates), carrying capacity, etc. 
 - Construct a population viability analysis (PVA) model, parameterized using the best information you can find in the literature (using InsightMaker, R, or Vortex as a modeling platform). 
 - Use your PVA model to run **scenario tests** that address a conservation or management question (to test your research question)
 - Use the model results to rank conservation or management actions for your species or population of interest
@@ -43,33 +43,33 @@ Your project proposal (approx 1 pg) will consist of:
 
 1. **Title**: should indicate what species you are modeling, and hint at what question(s) will be addressed   
 2. **Project participants**: provide names of all participants (3-4).   
-3. **Research question(s)**: Provide one or more testable and management-relevant questions that you plan to address using your population model. 
-4. **Project rationale**: Describe the rationale for choosing this species and management/conservation question. Be as specific as possible! Convince your instructor/TA that your project is **interesting**!    
-5. **Data sources**: Describe one or more information sources you plan to use to guide PVA construction and parameterization (we want to make sure your project is **possible**!)  
+3. **Research question(s)**: Provide one or more testable and management-relevant questions that you plan to address using your population model. Putting "too many" questions is okay for now- we will talk them over in our project meetings right before spring break.  
+4. **Project rationale**: Describe your rationale for choosing this species, and explain why your management/conservation question(s) are important to address. Be as specific as possible! Convince your instructor/TA that your project is **interesting**!    
+5. **Data sources**: Describe one or more information sources you plan to use to guide PVA construction and parameterization (convince your instructor/TA that your project is **doable**!)  
 
 Some key parameters you will likely need for your PVA model (and will be searching the literature for!) are: 
 
-- *survival rates* (usually age-structured)  
-- *birth rates* (often age-structured as well) and *age at maturity*    
-- *stochasticity* (amount of year-to-year variability in the above vital rates)  
-- *initial abundance*   
-- *mode of population regulation* (which vital rates have negative density dependence? Linear or threshold?)
-- *carrying capacity (K)* (potentially for multiple subpopulations in a metapopulation!)
-- *dispersal rates* (for metapopulation models)
-- *habitat quality* (for metapopulation models)
-- linkages between management activities and vital rates (to run scenario tests!)   
+- *survival rates* (usually age- or stage-structured)     
+- *birth rates* (usually age- or stage structured) and *age at maturity*    
+- *initial abundance*    
+- *carrying capacity (K)* (potentially for several subpopulations in a metapopulation model)     
+- *density dependence* (how do vital rates change as density increases?)         
+- *stochasticity* (annual variability in survival and birth rates)     
+- *dispersal rates* (for metapopulation models)      
+- *habitat quality* (for metapopulation models)       
+- *response to management** (linkages between management activities and vital rates - for running scenario tests!)       
 
 We have gone over many of these concepts in class already- PVA is just a way of putting all the concepts from this class together in a single model! You can get the above information directly from the published literature (or unpublished reports), or you estimate these parameters yourself using raw data (which we haven't yet gone over in class- and which you are not expected to do!!). If all else fails, you can use published records for similar species as a proxy (assuming that the vital rates are approximately the same)!
 
 ## Second project-related assignment: the initial PVA!
 
-Your initial parameterized PVA model will consist of:  
+Your **initial parameterized PVA model** will consist of:  
 
-1. A ready-to-run PVA model, in whatever software framework you are using (InsightMaker, R, Vortex). This model does not need to be the "final" model, but it should work (e.g., produce results) and the parameter estimates should be backed by some evidence or rationale (see below).
+1. A ready-to-run PVA model, in whatever software framework you are using (InsightMaker, R). This model does not need to be your "final" model, but it should work (e.g., produce results), the parameter estimates should be backed by some evidence or rationale (see below), and it should be capable of running your proposed scenario tests.
 
-2. A written rationale/evidence for each of your parameter estimates and other key modeling decisions.       
-    a. For each major decision you made in constructing the model, describe the information you used to back up your decision (and the source(s) of this information). Decisions include: how many populations, initial abundance(s), how many stages, how density-dependence operates for your species (e.g., which vital rates are density-dependent), Allee effects (if present), survival and fecundity rates, environmental stochasticity on one or more vital rates, catastrophes, etc. Where appropriate, feel free to embed figures, maps, etc. from your information sources.
-    b. What scenarios do you plan to test (e.g., management scenarios, climate change, harvest, etc), and how will these scenarios help you to address your research questions? NOTE: you don't need to run your scenario tests- just state what scenario tests you propose to run!
+2. A written rationale/evidence for all of your parameter estimates and key modeling decisions.       
+    a. For each major decision you made in constructing the model, describe the information you used to back up your decision (and the sources of this information). Decisions include: how many populations, what is your initial abundance(s), how many stage or age classes in your model, how does density-dependence (including Allee effects, if applicable) operate for your species (e.g., which vital rates are density-dependent, what is the shape of the density-dependence relationship), what are your survival and fecundity rates, how much annual variablility in birth and death rates (environmental stochasticity), what is the impact and timing of catastrophes (if applicable), etc. etc. Where appropriate, you can paste figures, tables, maps, etc. drawn from your information sources- just make sure you say where you got these images/tables etc.
+    b. What scenarios do you plan to test (e.g., management scenarios, climate change, harvest, etc), and how will these scenarios help you to address your research questions? NOTE: you don't need to run your scenario tests- just state what scenario tests you propose to run! *It must be clear that the working model you submitted is capable of running all of your proposed scenario tests*. 
     c. Literature cited (format not important, as long as it includes all key information)        
     
 ## Third project-related assignment: the written project (rough draft)!
