--- a/EXTRA_CREDIT.Rmd
+++ b/EXTRA_CREDIT.Rmd
@@ -13,7 +13,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-You may submit up to three extra credit essays -- one or two for each of the options listed below... 
+You may submit up to two extra credit essays -- one for each of the options listed below... 
 
 ## Extra Credit Option 1 -- Journal Article Response
 
